@@ -35,11 +35,8 @@ TODO: Define a maximum QSO upload rate to clublog to avoid excesive API usage.
 </CLUBLOG>
 
 KLog 0.9.2
-BUG: DXCluster spots are not correctly shown (worked/needed/...)
 Bug: An ADIF file with one blank line and one QSO freezes KLog.
 Bug?: Check if if is possible to import a ONE line log
-Bug?: Check if the dxcluster configuration to show or not confirmed/worked works properly
-TODO: Add a context suggestion to hit enter if no password is expected for the cluster. (tnx AA5VI)
 TODO: Add a message to show if a Spot/QSO is valid for the current year DX-Marathon
 TODO: When importing an ADIF file with several logs, create automatically the logs as detected.
 TODO: Remove all not needed fields from SetupPageLogNew::gatherAndSend() the type is enough
