@@ -5,12 +5,14 @@
 - BugFix: STX_String field was not always imported properly.
 - BugFix: Fixed a minor bug in log table regarding the prop_mode foreign key.
 - BugFix: Improved the color & status shown of a QSO on the DXCC.
-- BugFix: Fixed a bug that caused the colors in the DX-Cluster to appear always as new one.
+- BugFix: DXCluster: Fixed a bug that caused the colors to appear always as new one.
+- BugFix: DXCluster: The option to show only not confirmed was not working correcty.
 - Added the 630M & 13CM bands.
 - Updated Mode & submode definition up to ADIF 3.0.4.
 - KLog is able to import QSOs with no BAND field if FREQ field is present.
 - KLog offers the user a default value if RST_TX or RST_RX field is not present when importing.
 - GUI: Added some shortcuts in the preference widget.
+- GUI: DXCluster: Add a suggestion to hit enter if no password is expected for the cluster. (tnx AA5VI)
 - Support of realtime upload, modification & removal of a single QSO to/from ClubLog.org.
 - Updated the DB with the PROP_MODE options.
 - Improved the way KLog manages & shows the bands & modes.
